@@ -7,7 +7,7 @@
 		</h3>
 
 		<ul class="cat-list unstyled-list">
-			<?php $plxShow->catList('','<li id="#cat_id"><a class="#cat_status" href="#cat_url" title="#cat_name">#cat_name</a> (#art_nb)</li>'); ?>
+			<?php $plxShow->catList($plxShow->getLang('HOME'),'<li id="#cat_id"><a class="#cat_status" href="#cat_url" title="#cat_name">#cat_name</a> (#art_nb)</li>'); ?>
 		</ul>
 
 		<h3>
